# LLM-Assay---Evaluation

llm-assay/: .env  .gitignore  LICENSE  README.md  config.example.yaml  config.judge.example.yaml  pyproject.toml  requirements.txt
llm-assay/.github/workflows/: ci.yml
llm-assay/datasets/: gmp_severity_classification.jsonl  regulatory_qa.jsonl  sop_extraction.jsonl
llm-assay/examples/: sample-leaderboard.md  sample-report.html
llm-assay/reports/: report.html  report.json  report.md
llm-assay/src/assay/: __init__.py  __main__.py  cache.py  cli.py  config.py  dataset.py  models.py  pricing.py  report.py  runner.py  utils.py
llm-assay/src/assay/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  huggingface_provider.py  mock_provider.py  openai_provider.py  registry.py
llm-assay/src/assay/scorers/: __init__.py  base.py  json_match.py  llm_judge.py  registry.py  string_scorers.py
llm-assay/src/assay/templates/: report.html.j2
llm-assay/tests/: conftest.py  test_cache.py  test_dataset.py  test_json_match.py  test_llm_judge.py  test_pricing.py  test_providers.py  test_report.py  test_runner.py  test_string_scorers.py
