[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-assay"
version = "0.1.0"
description = "An evaluation harness for measuring LLM quality, latency, and cost on domain tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Md. Sazed Ul Karim" }]
keywords = ["llm", "evaluation", "benchmark", "eval", "rag", "prompt-engineering"]

dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
assay = "assay.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/assay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # function calls in argument defaults are fine for our Click options
